Created Demo.zip download

--- a/Readme.html
+++ b/Readme.html
@@ -78,21 +78,26 @@ body{font-family:helvetica, arial, freesans, clean, sans-serif;color:#333;line-h
 <p>This demo is comprised of the following tasks:</p>
 
 <ul>
-<li><a href="#Task1">Task 1</a></li>
-<li><a href="#Task2">Task 2</a> </li>
-<li><a href="#Task3">Task 3</a></li>
+<li><a href="#Task1">Creating a Demo Script</a></li>
+<li><a href="#Task2">Adding Code</a> </li>
+<li><a href="#Task3">Adding Screen Shots</a></li>
 </ul>
 
 <hr>
 
 <p><a name="Task1"></a></p>
 
-<h2 id="Task_1">Task 1</h2>
+<h2 id="Creating_a_Demo_Script">Creating a Demo Script</h2>
 
-<p>In this task we'll......</p>
+<p>In this task, you'll create a basic demo script using the template.  </p>
 
 <ol>
-<li>Do <strong>This</strong> using this code:</li>
+<li><p>Download the <a href="./Downloads/Demo.zip">Demo.zip</a> file to a folder on your PC.  </p></li>
+<li><p>Right-click on the downloaded file, and select <strong>&quot;Properties&quot;</strong> from the pop-up menu:</p></li>
+<li><p>Open the file in Marker.exe </p>
+<blockquote>
+<p><strong>Note:</strong> if the file associations were created earlier</p>
+</blockquote></li>
 </ol>
 
 <span class="codelanguage">C#</span><pre><code class="C#"><span style="color:#0000FF">void</span> Main() {
